# pixview

./: CMakeLists.txt  pixview.org
CMake/: FindSDL2.cmake
src/: .clang_complete  CMakeLists.txt  geo.cpp  pixview.cpp  render.cpp  render.hpp  test_magic.cpp
